# StreamPlatform

./: .gitignore  docker-compose.yaml
backend/: .eslintrc.json  Dockerfile  package-lock.json  package.json  startup.sh  tmp.Dockerfile  tsconfig.json
backend/src/api/: StreamPlatform_API.ts
backend/src/config/: config.ts  logging.ts  mysql.ts  scylla.ts
backend/src/util/: utilFunctions.ts
client/: .eslintrc.json  next.config.js  package-lock.json  package.json  tailwind.config.js
client/src/Meta/: Meta.tsx
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/security/: Accounts.tsx
server/db/: account_history.sql  backup.sql  blocked_list.sql  chanel_roles_alloc.sql  creator_videos_history.sql  liveMessages.cql  liveStreamShanpshots.sql  roles.sql  streams.sql  test.sql  user_follw_account_class.sql  user_liked_or_disliked_stream_class.sql  user_liked_or_disliked_video_class.sql  user_role_on_chanel_class.sql  users.sql  videos.sql  videos_categories.sql  videos_category_alloc.sql
server/file-server/: Dockerfile  go.mod  go.sum  main.go
server/live-stream-server/: docker-compose.yaml
server/live-stream-server/live-snaphots/: .env  Cargo.toml
server/live-stream-server/live-snaphots/src/: main.rs
server/recomandation-server/: dockerfile  go.mod  main.go
server/search-server/: go.mod  go.sum  main.go
server/updateHistoryTables-server/: .env  Cargo.toml
server/video-categorize-server/: Dockerfile  VideoClassification.ipynb  createModel.py  create_model.ipynb  tmp.Dockerfile  web_scraper.ipynb
server/video-stream-api/: pom.xml
(+91 files in other folders)
