[package]
name = "live-snaphots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
dotenv = "*"
mysql = "*"
tokio = { version = "1", features = ["full"] }
log = "0.4.14"
env_logger = "0.10.1"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
